# tha-map-runner

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/tha_map_runner/: __init__.py  errors.py  mapper.py  paths.py
tests/: conftest.py  test_expand_rows.py  test_mapper.py  test_paths.py
