[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-map-runner"
version = "0.2.12"
description = "A Tabular Helper API library that maps and joins dict-like data into row dicts using dotted-path projection."
readme = "README.md"
keywords = ["data-mapping", "join", "tabular", "helper"]
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "deptry>=0.25.1",
    "pip-audit>=2.10.1",
    "pytest-cov>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-map-runner"
Issues = "https://github.com/tha-guy-nate/tha-map-runner/issues"
Changelog = "https://github.com/tha-guy-nate/tha-map-runner/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_map_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
known_first_party = ["tha_map_runner"]
optional_dependencies_dev_groups = ["dev"]

[tool.coverage.run]
source = ["src"]
